Fixed navView from having a bunch of whitespace on mobile.

--- a/modern-backbone-starterkit/src/styles/article.styl
+++ b/modern-backbone-starterkit/src/styles/article.styl
@@ -19,7 +19,7 @@
 }
 
 .article-view-article-grid-container {
-  padding: 0 10px 0 10px;
+  padding: 0 25px;
 }
 
 .kmw-bottom-section {
