--- a/modern-backbone-starterkit/src/styles/nav.styl
+++ b/modern-backbone-starterkit/src/styles/nav.styl
@@ -68,6 +68,7 @@ li.active a.kmw-nav-item-anchor {
 }
 
 .kmw-navbar {
+  width: 100vw;
   padding-top: 20px;
   padding-bottom: 10px;
   border: none !important;
